--- a/index.html
+++ b/index.html
@@ -3,19 +3,30 @@
 
   <head><!-- where all the meta data will go, like and files we need to include -->
     <title>My Little Rainbow</title><!-- the title is what appears on your tab -->
+    <link rel="stylesheet" type="text/css" href="./main.css" />
   </head>
 
-  <body><!-- the body element is where everything we will see on the page will go -->
+  <body>
+    <div id="red"> </div>
+    <div id=orange> </div>
+    <div id=yellow> </div>
+    <div id=green> </div>
+    <div id=blue> </div>
+    <div id=indigo> </div>
+    <div id=violet> </div>
+  </body><!-- the body element is where everything we will see on the page will go -->
 
     <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div>
-                <div></div> <!-- the grandest child div -->
-              </div>
+    <div> id="red"><div id="f00"></div>
+      <div> id="orange"><div id="ffa500"></div>
+        <div> id="yellow"><div id="ff0"></div>
+          <div> id="green"><div id="00bc3f"></div>
+            <div> id="blue"><div id="06f"></div>
+              <div> id="indigo"><div id="8a2be2"></div>
+                <div> id="violet"><div id="d300c9"></div>
+
+                </div> <!-- the grandest child div -->
+              </div> 
             </div>
           </div>
         </div>
